[package]
name = "p2p-node"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.53.2", features = ["tokio", "identify", "quic", "request-response", "mdns", "macros", "cbor"] }
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }

